# cog2d

./: .clang-format  .gitignore  .kateproject.build  CMakeLists.txt  Doxyfile  LICENSE  license_template.txt  meson.build  vcpkg.json
assets/: cog2d_tilemap.hexpat  cog2d_tilemap.hexproj  propertytypes.json
cmake/: Cog2dGame.cmake  Cog2dTests.cmake  Cog2dTidySources.cmake
include/: cog2d
include/cog2d/: program.hpp  screen.hpp
include/cog2d/assets/: asset.hpp  assetcollection.hpp  assetmanager.hpp
include/cog2d/audio/: alsoftaudioengine.hpp  audioengine.hpp  musicplayer.hpp  musictrack.hpp  soundeffect.hpp  tomlmusictrackparser.hpp
include/cog2d/audio/alsoft/: alsoftaudioengine.hpp
include/cog2d/audio/sdl2/: sdl2audioengine.hpp
include/cog2d/config/: config.hpp
include/cog2d/filesystem/: assetfile.hpp  file.hpp  iodevice.hpp
include/cog2d/filesystem/document/: documentnode.hpp  tomldocument.hpp
include/cog2d/input/: controller.hpp  inputmanager.hpp  joypadcontroller.hpp  keyboardcontroller.hpp
include/cog2d/scene/: actor.hpp  actorcomponents.hpp  actorcontainers.hpp  actormanager.hpp  actorrefsiterator.hpp  actorstage.hpp  camera.hpp  scene.hpp  viewport.hpp
include/cog2d/scene/collision/: collision.hpp  collisionbody.hpp  collisionsystem.hpp
include/cog2d/scene/tilemap/: bintilemapparser.hpp  cameratilelayeriterator.hpp  tile.hpp  (+4 more)
include/cog2d/util/: backend.hpp  currenton.hpp  fmt.hpp  logger.hpp  namespacedef.hpp  parsing.hpp  timer.hpp  timing.hpp  typetraits.hpp
include/cog2d/video/: color.hpp  graphicsengine.hpp  sdl2graphicsengine.hpp  surface.hpp  texture.hpp
src/: actor.cpp  actor.hpp  actormanager.cpp  actormanager.hpp  assetmanager.cpp  assetmanager.hpp  audioengine.cpp  audioengine.hpp  bitmapfont.cpp  bitmapfont.hpp  cameratilelayeriterator.cpp  cameratilelayeriterator.hpp  collisionbody.cpp  collisionbody.hpp  collisionsystem.cpp  collisionsystem.hpp  config.cpp  config.hpp  controller.cpp  controller.hpp  font.cpp  font.hpp  graphicsengine.cpp  graphicsengine.cpp.orig  graphicsengine.hpp  inputmanager.cpp  inputmanager.hpp  joypadcontroller.cpp  joypadcontroller.hpp  keyboardcontroller.cpp  keyboardcontroller.hpp  logger.cpp  logger.hpp  painter.cpp  painter.hpp  program.cpp  program.hpp  scene.cpp  scene.hpp  screen.cpp  (+14 more)
src/assets/: asset.hpp  assetcollection.cpp  assetcollection.hpp  assetmanager.cpp  assetmanager.hpp
src/audio/: alsoftaudioengine.cpp  audioengine.cpp  audioengine.hpp  musicplayer.cpp  musicplayer.hpp  musictrack.cpp  soundeffect.cpp  soundeffect.hpp  tomlmusictrackparser.cpp
src/audio/alsoft/: alsoftaudioengine.cpp
src/audio/sdl2/: sdl2audioengine.cpp
src/cog2d/: program.cpp  program.hpp
src/cog2d/assets/: assetcollection.cpp  assetcollection.hpp  assetmanager.cpp  assetmanager.hpp
src/cog2d/audio/: audioengine.cpp  audioengine.hpp  musicplayer.cpp  musictrack.cpp  musictrack.hpp  musictrackparser.cpp  soundeffect.cpp  soundeffect.hpp
src/cog2d/ecs/: activestate.hpp  builtins.cpp  builtins.hpp  ecs.hpp  entity.hpp  entitybase.cpp  entitybase.hpp  entityid.hpp  world.hpp
src/cog2d/filesystem/: assetfile.cpp  assetfile.hpp  file.cpp  file.hpp  iodevice.cpp  iodevice.hpp
src/cog2d/scene/: actor.cpp  actorfactory.hpp  actorrefsiterator.cpp  camera.cpp  scene.cpp  scene.hpp
src/cog2d/tilemap/: cameratilelayeriterator.cpp  cameratilelayeriterator.hpp  tile.hpp  tilelayer.cpp  tilelayer.hpp  tilemap.cpp  tilemap.hpp  tilemapparser.cpp  tileset.cpp  tileset.hpp
src/cog2d/util/: cmdlineparser.cpp  cmdlineparser.hpp  parsing.hpp  timer.hpp  toml.cpp  toml.hpp
src/cog2d/video/: graphicsengine.cpp  graphicsengine.hpp  sdl2graphicsengine.cpp  surface.cpp  surface.hpp  texture.cpp  texture.hpp
src/config/: config.cpp  config.hpp
src/filesystem/: assetfile.cpp  assetfile.hpp  file.cpp  file.hpp  iodevice.cpp  iodevice.hpp
src/filesystem/document/: documentnode.cpp  tomldocument.cpp
src/input/: controller.cpp  controller.hpp  inputmanager.cpp  inputmanager.hpp  joypadcontroller.cpp  joypadcontroller.hpp  keyboardcontroller.cpp  keyboardcontroller.hpp
src/scene/: actor.cpp  actor.hpp  actormanager.cpp  actormanager.hpp  actorrefsiterator.cpp  actorrefsiterator.hpp  actorstage.cpp  camera.cpp  camera.hpp  scene.cpp  scene.hpp  viewport.cpp
src/scene/collision/: collisionbody.cpp  collisionbody.hpp  collisionsystem.cpp  collisionsystem.hpp
src/scene/tilemap/: bintilemapparser.cpp  cameratilelayeriterator.cpp  cameratilelayeriterator.hpp  tile.hpp  tilelayer.cpp  tilelayer.hpp  tilemap.cpp  tilemap.hpp  tilemapparser.cpp  tilescene.cpp  tileset.cpp  tileset.hpp
src/util/: buffer.hpp  currenton.hpp  fmt.hpp  logger.cpp  logger.hpp  namespacedef.hpp  timer.cpp  timer.hpp  timing.cpp
src/util/math/: rect.hpp  util.hpp  vector.hpp
src/video/: color.hpp  graphicsengine.cpp  graphicsengine.hpp  sdl2graphicsengine.cpp  surface.cpp  surface.hpp  texture.cpp  texture.hpp
src/video/font/: bitmapfont.cpp  bitmapfont.hpp  font.cpp  font.hpp  fontcache.cpp  pixmapfont.cpp  sdl2ttffont.cpp  tomlpixmapfontparser.cpp  ttffont.cpp  ttffont.hpp
src/video/sdl2/: sdl2graphicsengine.cpp  sdl2texture.cpp
tests/: CMakeLists.txt  main.cpp
tests/bouncing/: CMakeLists.txt  ball.cpp  ball.hpp  bouncing.cpp  bouncing.hpp  main.cpp
tests/config/: CMakeLists.txt  config.cpp  config.hpp  main.cpp
tests/draw/: CMakeLists.txt  draw.cpp  draw.hpp  main.cpp
tests/image/: CMakeLists.txt  image.cpp  image.hpp  main.cpp
tests/log/: CMakeLists.txt  log.cpp  log.hpp  main.cpp
tests/sound/: CMakeLists.txt  main.cpp  sound.cpp  sound.hpp
tests/text/: CMakeLists.txt  main.cpp  text.cpp  text.hpp
tests/unit/: CMakeLists.txt  cmdlineparser_test.cpp  ext.cpp  vector_test.cpp
tools/: CMakeLists.txt
tools/qtcwizards/: CMakeLists.txt
tools/qtcwizards/component_system/: file.cpp.in  file.hpp.in  wizard.json
tools/tiledextension/: CMakeLists.txt  README.adoc  README.md  package.json  tsconfig.json  webpack.config.js
tools/tiledextension/patching/: dist.patch  update.sh
tools/tiledextension/src/: index.ts
(+36 files in other folders)
