project('cog2d', 'cpp', default_options: 'default_library=static')

# Dependencies #

sdl2_dep = dependency('sdl2')
sdl2_image_dep = dependency(['sdl2_image', 'SDL2_image'])
sdl2_ttf_dep = dependency(['sdl2_ttf', 'SDL2_ttf'])
openal_dep = dependency('openal')
fmt_dep = dependency('fmt')

# Declare dependency #

cog2d_sources = files(
	'src/assets/assetcollection.cpp',
	'src/assets/assetmanager.cpp',
	'src/audio/alsoftaudioengine.cpp',
	'src/audio/audioengine.cpp',
	'src/audio/musicplayer.cpp',
	'src/audio/musictrack.cpp',
	'src/audio/soundeffect.cpp',
	'src/audio/tomlmusictrackparser.cpp',
	'src/filesystem/assetfile.cpp',
	'src/filesystem/file.cpp',
	'src/filesystem/iodevice.cpp',
	'src/input/inputmanager.cpp',
	'src/program.cpp',
	'src/scene/actor.cpp',
	'src/scene/actormanager.cpp',
	'src/scene/actorrefsiterator.cpp',
	'src/scene/actorstage.cpp',
	'src/scene/camera.cpp',
	'src/scene/collision/collision.cpp',
	'src/scene/collision/collisionbody.cpp',
	'src/scene/collision/collisionsystem.cpp',
	'src/scene/scene.cpp',
	'src/scene/tilemap/bintilemapparser.cpp',
	'src/scene/tilemap/cameratilelayeriterator.cpp',
	'src/scene/tilemap/tilelayer.cpp',
	'src/scene/tilemap/tilemap.cpp',
	'src/scene/tilemap/tilescene.cpp',
	'src/scene/tilemap/tileset.cpp',
	'src/scene/viewport.cpp',
	'src/util/timer.cpp',
	'src/util/timing.cpp',
	'src/video/font/sdl2ttffont.cpp',
	'src/video/font/fontcache.cpp',
	'src/video/font/pixmapfont.cpp',
	'src/video/font/tomlpixmapfontparser.cpp',
	'src/video/graphicsengine.cpp',
	'src/video/sdl2graphicsengine.cpp',
	'src/video/font/sdl2ttffont.cpp',
	'src/video/surface.cpp',
	'src/video/texture.cpp',

	'include/cog2d/assets/asset.hpp',
	'include/cog2d/assets/assetcollection.hpp',
	'include/cog2d/assets/assetmanager.hpp',
	'include/cog2d/audio/alsoftaudioengine.hpp',
	'include/cog2d/audio/audioengine.hpp',
	'include/cog2d/audio/musicplayer.hpp',
	'include/cog2d/audio/musictrack.hpp',
	'include/cog2d/audio/soundeffect.hpp',
	'include/cog2d/audio/tomlmusictrackparser.hpp',
	'include/cog2d/filesystem/assetfile.hpp',
	'include/cog2d/filesystem/file.hpp',
	'include/cog2d/filesystem/iodevice.hpp',
	'include/cog2d/input/inputmanager.hpp',
	'include/cog2d/program.hpp',
	'include/cog2d/scene/actor.hpp',
	'include/cog2d/scene/actorcomponents.hpp',
	'include/cog2d/scene/actorcontainers.hpp',
	'include/cog2d/scene/actorfactory.hpp',
	'include/cog2d/scene/actormanager.hpp',
	'include/cog2d/scene/actorrefsiterator.hpp',
	'include/cog2d/scene/actorstage.hpp',
	'include/cog2d/scene/camera.hpp',
	'include/cog2d/scene/collision/collision.hpp',
	'include/cog2d/scene/collision/collisionbody.hpp',
	'include/cog2d/scene/collision/collisionsystem.hpp',
	'include/cog2d/scene/scene.hpp',
	'include/cog2d/scene/tilemap/bintilemapparser.hpp',
	'include/cog2d/scene/tilemap/cameratilelayeriterator.hpp',
	'include/cog2d/scene/tilemap/tile.hpp',
	'include/cog2d/scene/tilemap/tilelayer.hpp',
	'include/cog2d/scene/tilemap/tilemap.hpp',
	'include/cog2d/scene/tilemap/tilescene.hpp',
	'include/cog2d/scene/tilemap/tileset.hpp',
	'include/cog2d/scene/viewport.hpp',
	'include/cog2d/screen.hpp',
	'include/cog2d/util/backend.hpp',
	'include/cog2d/util/buffer.hpp',
	'include/cog2d/util/currenton.hpp',
	'include/cog2d/util/fmt.hpp',
	'include/cog2d/util/logger.hpp',
	'include/cog2d/util/math/rect.hpp',
	'include/cog2d/util/math/util.hpp',
	'include/cog2d/util/math/vector.hpp',
	'include/cog2d/util/parsing.hpp',
	'include/cog2d/util/timer.hpp',
	'include/cog2d/util/timing.hpp',
	'include/cog2d/util/typetraits.hpp',
	'include/cog2d/video/color.hpp',
	'include/cog2d/video/font/ttffont.hpp',
	'include/cog2d/video/font/fontcache.hpp',
	'include/cog2d/video/font/pixmapfont.hpp',
	'include/cog2d/video/font/tomlpixmapfontparser.hpp',
	'include/cog2d/video/graphicsengine.hpp',
	'include/cog2d/video/sdl2graphicsengine.hpp',
	'include/cog2d/video/surface.hpp',
	'include/cog2d/video/texture.hpp',
)
cog2d_include_dirs = include_directories('include', is_system: true)
cog2d_deps = [sdl2_dep, sdl2_image_dep, sdl2_ttf_dep, openal_dep, fmt_dep]

cog2d_dep = declare_dependency(
	compile_args: ['-fno-rtti'],
	dependencies: cog2d_deps,
	include_directories: cog2d_include_dirs,
	sources: cog2d_sources,
)

meson.override_dependency('cog2d', cog2d_dep)
