macro(subdirlist result curdir)
	file(GLOB children RELATIVE ${curdir} ${curdir}/*)
	set(dirlist "")
	foreach(child ${children})
		if(IS_DIRECTORY ${curdir}/${child})
			list(APPEND dirlist ${child})
		endif()
	endforeach()
	set(${result} ${dirlist})
endmacro()

subdirlist(COG2D_TESTS ${cog2d_SOURCE_DIR}/tests)
foreach(test ${COG2D_TESTS})
	add_subdirectory(${test})
endforeach()
